Unhide search form after sphinx-book-theme release v0.3.0

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -145,6 +145,13 @@ div.admonition.admonition-todo > .admonition-title::before {
 }
 
 /* Search */
+
+/* Show search form. It is hidden by default. */
+#search-documentation,
+#search-documentation~form,
+#search-documentation~p {
+ display:block;
+}
 ul.search {
   margin-left: 0;
 }
