--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -125,6 +125,9 @@ div.admonition.admonition-todo > .admonition-title::before {
   color: rgba(var(--pst-color-admonition-todo),1);
   content: var(--pst-icon-admonition-todo);
 }
+.admonition-github-only.admonition {
+  display: none;
+}
 
 
 .topic {
