--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -106,6 +106,14 @@ div.section {
   margin-bottom: 5rem;
 }
 
+div.section div.section {
+  margin-bottom: 5rem;
+}
+
+div.section div.section div.section {
+  margin-bottom: 2rem;
+}
+
 /* admonitions */
 .admonition {
   border-radius: 0;
