--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -410,7 +410,7 @@ div.viewcode-block:target {
 }
 
 /* Fix paragraphs in list items. */
-#main-content ol > li > p,
-#main-content ul > li > p {
-  margin-bottom: 1em;
+#main-content ol > li > p:nth-child(n+2),
+#main-content ul > li > p:nth-child(n+2) {
+  margin-top: 1em;
 }
