--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -179,7 +179,7 @@ div.admonition.admonition-todo>.admonition-title::before {
 
 #search-shortcut-page {
   position: absolute;
-  right: 9.5625rem;
+  right: 156px;
   top: 0.375rem;
   border-radius: 0.25em;
   background: #d9eef9;
