--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -190,11 +190,7 @@ div.admonition.admonition-todo>.admonition-title::before {
 }
 
 #search-form .search-icon {
-  position: absolute;
-  color: #a4a6a7;
   left: 1.5625rem;
-  z-index: 100;
-  align-self: center;
 }
 
 #search-form .form-control {
@@ -278,7 +274,7 @@ ul.search li p.context {
   padding-left: 2.1875rem;
 }
 
-.bd-search .search-icon {
+.search-icon {
   position: absolute;
   color: #a4a6a7;
   left: .625rem;
