show/hide shortcut label using CSS

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -184,6 +184,11 @@ div.admonition.admonition-todo>.admonition-title::before {
   display: block;
 }
 
+#search-form:focus-within #shortcut-page,
+#search-form:focus-within #shortcut {
+  display: none;
+}
+
 #shortcut-page.input-group-text {
   padding-top: 0;
   padding-bottom: 0;
