--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -279,6 +279,14 @@ input#search-input {
   border-radius: .25rem 0 0 .25rem;
 }
 
+.search-icon {
+  position: absolute;
+  color: #a4a6a7;
+  left: .625rem;
+  z-index: 100;
+  align-self: center;
+}
+
 .input-group-text kbd {
   padding: 0rem 0.4rem;
   font-size: 135%;
