Add img.inline style for Pastanaga icons

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -58,6 +58,11 @@ img.figure,
   margin-bottom: 1rem;
 }
 
+img.inline {
+  margin: 0;
+  height: 1em;
+}
+
 span.linenos {
   padding-right: 1em;
 }
